# mini-tournament-system

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 32557f63d03b_create_players_and_tournament_table_for_.py  3b38b5a712fe_create_players_and_tournament_table.py  5772b07714c0_enabled_timezone_for_all_datetime_fields.py  636c4840c6b6_create_users_table.py  7fb4fbf70d17_restricting_to_register_more_players_.py  8cf8bf2d0b69_restored_the_changes.py
app/: config.py  db.py  main.py
app/api/: tournament.py
app/exceptions/: player.py  tournament.py
app/models/: __init__.py  player.py  tournament.py
app/repositories/: player.py  tournament.py
app/schemas/: common.py  player.py  tournament.py
app/services/: player.py  tournament.py
tests/api/: test_tournament.py
tests/repositories/: config.py  test_player.py  test_tournament.py
tests/services/: test_player.py  test_tournament.py
