[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "B", "I"]
ignore = []

[project]
name = "tournament-system"
version = "0.1.0"
description = "Mini tournament system"
requires-python = ">=3.12"